apps/trunk-recorder/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: trunk-recorder
  namespace: trunk-recorder
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: trunk-recorder
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: rdio-scanner
            app.kubernetes.io/instance: rdio-scanner
